hphp/test/zend/bad/tests-classes/interface_member.php
<?php

interface if_a {
	public $member;
}
?>